feat: add db, and massive changes

--- a/apps/intro/src/styles/index.less
+++ b/apps/intro/src/styles/index.less
@@ -1,3 +1,25 @@
-body {
-  background-color: lightblue;
+.profile {
+  background-image:url("resources/dynamic/images/album/atorius.jpg");
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  .wrap {
+    max-width: 1350px;
+    margin: 0 auto;
+    padding: 39px 0 55px;
+
+
+    h1 {
+      padding-left: 49px;
+      color: #fff;
+      font-size: 58px;
+    }
+  
+    small {
+      color: #ddd;
+      font-size: 26px;
+    }
+  }
 }
