feat: intro page

--- a/apps/intro/src/styles/index.less
+++ b/apps/intro/src/styles/index.less
@@ -1,6 +1,7 @@
 @titleOpacity: 0.5;
 
 section {
+  color: #525252;
   box-sizing: border-box;
 
   .wrap {
@@ -54,16 +55,17 @@ section {
       }
   
       .profile-pic {
-        margin-bottom: 32px;
+        margin-bottom: 16px;
+        margin-left: 16px;
+        margin-top: 16px;
         float: right;
-        width: 288px;
+        height: 520px;
         border-radius: 5px;
       }
   
       .intro {
         white-space: break-spaces;
-        color: #555;
-        max-width: 760px;
+        max-width: 1000px;
         margin: 0;
         padding-left: 70px;
         font-size: 22px;
@@ -72,7 +74,7 @@ section {
   }
 }
 
-.home-title {
+.frontend-title {
   height: 518px;
   padding-top: 200px;
   background-attachment: fixed;
@@ -87,7 +89,40 @@ section {
   }
 }
 
-.home {
+.frontend {
+  .wrap {
+    padding: 39px 0 58px;
+    max-width: 1350px;
+    margin: 0 auto;
+
+    h2 {
+      font-size: 66px;
+      padding-left: 49px;
+      margin-bottom: 32px;
+    }
+
+    .paragraph-one {
+      padding: 0 70px;
+    }
+  }
+}
+
+.backend-title {
+  height: 518px;
+  padding-top: 200px;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
+  h2 {
+    color: #fff;
+    font-size: 88px;
+    text-align: center;
+  }
+}
+
+.backend {
   .wrap {
     padding: 39px 0 58px;
     max-width: 1350px;
@@ -101,7 +136,7 @@ section {
   }
 }
 
-.algorithms-title {
+.devtools-title {
   height: 518px;
   padding-top: 200px;
   background-attachment: fixed;
@@ -116,36 +151,7 @@ section {
   }
 }
 
-.algorithms {
-  .wrap {
-    padding: 39px 0 58px;
-    max-width: 1350px;
-    margin: 0 auto;
-
-    h2 {
-      font-size: 66px;
-      padding-left: 49px;
-      margin-bottom: 32px;
-    }
-  }
-}
-
-.apps-title {
-  height: 518px;
-  padding-top: 200px;
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-
-  h2 {
-    color: #fff;
-    font-size: 88px;
-    text-align: center;
-  }
-}
-
-.apps {
+.devtools {
   .wrap {
     padding: 39px 0 58px;
     max-width: 1350px;
