feat: scroll bar

--- a/apps/common/src/modules/scrollable/index.less
+++ b/apps/common/src/modules/scrollable/index.less
@@ -3,15 +3,16 @@
   position: absolute;
   top: 0;
   right: 0;
-  width: 12px;
+  width: 0;
   height: 100%;
   display: none;
   overflow: hidden;
+  transition: width 0.7s ease;
 
   .scroll-bar {
     position: absolute;
     top: 0;
-    opacity: 0.5;
+    opacity: 0;
     width: 8px;
     margin: 0 2px;
     background: #000;
