--- a/apps/common/src/modules/loading/index.less
+++ b/apps/common/src/modules/loading/index.less
@@ -1,4 +1,4 @@
-#loading {
+#atat-loading {
   z-index: 8;
   position: fixed;
   width: 100%;
@@ -17,6 +17,6 @@
   }
 }
 
-#main {
+#app {
   display: none;
 }
