feat: door and intro page

--- a/apps/common/src/modules/door/index.less
+++ b/apps/common/src/modules/door/index.less
@@ -1,4 +1,4 @@
-@doorColor: #d19c6d;
+@doorColor: #856e5a;
 @edgeColor: rgb(20, 88, 24);
 
 /*door*/
@@ -15,8 +15,8 @@
   perspective-origin: left 4em;
   opacity: 0.7;
   transition: opacity 0.4s ease;
-  z-index: 88;
   transition: background 0.5s ease;
+  z-index: 88;
 }
 
 #door .pivot {
