--- a/apps/intro/src/styles/index.less
+++ b/apps/intro/src/styles/index.less
@@ -52,6 +52,24 @@ html {
           }
         }
       }
+
+      #door {
+        transition: all 0.7s ease;
+
+        &.show {
+          opacity: 0.7;
+          bottom: 5.6em;
+
+          &:hover {
+            opacity: 1;
+          }
+        }
+
+        &.hide {
+          opacity: 0;
+          bottom: -10em;
+        }
+      }
     }
   }
 }
