--- a/apps/common/src/modules/door/index.less
+++ b/apps/common/src/modules/door/index.less
@@ -61,7 +61,7 @@
   text-align: center;
   border: 1px solid #666;
   color: #fff;
-  font-weight: bold;
+  font-weight: 300;
   box-shadow: -0.2em 0.1em 0.4em #222;
   font-size: 1.6em;
   line-height: 1.3em;
