feat: fix less url, update readme

--- a/apps/common/src/modules/door/index.less
+++ b/apps/common/src/modules/door/index.less
@@ -1,7 +1,6 @@
 @doorColor: #77685b;
 @edgeColor: rgb(38, 119, 44);
 
-/*door*/
 #door {
   font-size: 10px;
   display: block;
@@ -194,7 +193,8 @@
   width: 1em;
   height: 1em;
   border-radius: 50%;
-  background: url('@resources/static/materials/handler.png') no-repeat;
+  background-image: url("/@resources/static/materials/handler.png");
+  background-repeat: no-repeat;
   background-size: 100% 100%;
   z-index: 2;
   transition: transform 1s ease;
