--- a/apps/intro/src/styles/index.less
+++ b/apps/intro/src/styles/index.less
@@ -58,7 +58,7 @@ html {
 
         &.show {
           opacity: 0.7;
-          bottom: 5.6em;
+          left: 4em;
 
           &:hover {
             opacity: 1;
@@ -67,7 +67,7 @@ html {
 
         &.hide {
           opacity: 0;
-          bottom: -10em;
+          left: -10em;
         }
       }
     }
