--- a/apps/common/src/modules/door/index.less
+++ b/apps/common/src/modules/door/index.less
@@ -13,8 +13,7 @@
   perspective: 40em;
   perspective-origin: left 4em;
   opacity: 0.7;
-  transition: opacity 0.4s ease;
-  transition: background 0.5s ease;
+  transition: opacity 0.7s ease, left 0.7s ease;
   z-index: 88;
 }
 
@@ -284,6 +283,7 @@
 }
 
 #door:hover {
+  transition: opacity 0s;
   opacity: 1;
 }
 
@@ -341,4 +341,21 @@
   height: 0.8em;
   top: 3.5em;
   left: 7.3em;
+}
+
+// auto hide
+#door {
+  &.show {
+    opacity: 0.7;
+    left: 4em;
+
+    &:hover {
+      opacity: 1;
+    }
+  }
+
+  &.hide {
+    opacity: 0;
+    left: -10em;
+  }
 }
