--- a/apps/common/src/modules/audio/index.less
+++ b/apps/common/src/modules/audio/index.less
@@ -1,26 +1,46 @@
 #audio {
+  z-index: 99;
   font-size: 10px;
   top: 0.6em;
-  width: 30em;
-  height: 5.4em;
-  left: calc(50% - 15em);
-  position: absolute;
-  background: cyan;
+  width: 26em;
+  height: 5.2em;
+  left: calc(50% - 13em);
+  position: fixed;
+  border-radius: 1.2em;
+  background-color: rgba(255, 255, 255);
+  box-shadow: inset 0.2em 0.3em 0.8em #333;
 
 
   .play-button {
     position: absolute;
-    top: 0.2em;
-    left: 0.2em;
-    width: 5em;
-    height: 5em;
+    top: calc(50% - 1em);
+    left: -3.6em;
+    width: 2em;
+    height: 2em;
     cursor: pointer;
   }
 
   .audio-title {
-    position: absolute;
-    top: 0.2em;
-    right: 0.2em;
-    font-size: 1.8em;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    position: relative;
+    margin: 0 auto;
+    line-height: 2.5em;
+    font-size: 1.3em;
+    color: rgb(110, 9, 9);
+    width: 80%;
+    height: 100%;
+    overflow: hidden;
+
+    .title-wrap {
+      position: absolute;
+      top: 0;
+      left: -100%;
+      white-space: nowrap;
+    }
   }
 }
