feat: audio player and a few small changes

--- a/apps/common/src/modules/audio/index.less
+++ b/apps/common/src/modules/audio/index.less
@@ -1,7 +1,13 @@
 #audio {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  display: block;
   z-index: 99;
   font-size: 10px;
-  top: 0.6em;
   width: 26em;
   height: 5.2em;
   left: calc(50% - 13em);
@@ -9,7 +15,17 @@
   border-radius: 1.2em;
   background-color: rgba(255, 255, 255);
   box-shadow: inset 0.2em 0.3em 0.8em #333;
+  transition: opacity 0.7s ease, top 0.7s ease;
 
+  &.show {
+    top: 1.8em;
+    opacity: 1;
+  }
+
+  &.hide {
+    top: -7.2em;
+    opacity: 0;
+  }
 
   .play-button {
     position: absolute;
@@ -21,12 +37,6 @@
   }
 
   .audio-title {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
     position: relative;
     margin: 0 auto;
     line-height: 2.5em;
@@ -41,6 +51,29 @@
       top: 0;
       left: -100%;
       white-space: nowrap;
+    }
+  }
+
+  .lock {
+    position: absolute;
+    bottom: -0.8em;
+    right: -1.2em;
+    font-size: 1.5em;
+    font-family: KaiTi;
+    color: #000;
+    font-weight: bold;
+    cursor: pointer;
+    transition: opacity 0.7s ease, color 0.3s ease;
+    opacity: 0;
+
+    &.active {
+      color: rgb(110, 9, 9);
+    }
+  }
+
+  &:hover {
+    .lock {
+      opacity: 1;
     }
   }
 }
