feat: adjust style

--- a/apps/common/src/modules/audio/index.less
+++ b/apps/common/src/modules/audio/index.less
@@ -60,9 +60,9 @@
 
   .lock {
     position: absolute;
-    bottom: -0.3em;
-    right: -2.9em;
-    font-size: 1.6em;
+    bottom: 0;
+    right: -3.2em;
+    font-size: 1.5em;
     font-weight: bold;
     cursor: pointer;
     transition: opacity 0.3s ease, right 0.3s ease;
@@ -87,7 +87,7 @@
 
     .lock {
       opacity: 1;
-      right: -1.8em;
+      right: -2em;
     }
 
     .play-button {
