--- a/apps/intro/src/components/BouncingStar/index.less
+++ b/apps/intro/src/components/BouncingStar/index.less
@@ -2,4 +2,22 @@
   position: absolute;
   z-index: 999;
   cursor: grab;
+  width: 100px;
+  height: 100px;
+  display: none;
+  opacity: 1;
+  transition: opacity 0.5s linear;
+}
+
+#circle-wrap {
+  display: none;
+  position: fixed;
+
+  .circle {
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    border-radius: 100%;
+    background: red;
+  }
 }
