--- a/apps/intro/src/components/BouncingStar/index.less
+++ b/apps/intro/src/components/BouncingStar/index.less
@@ -1,15 +1,37 @@
 #star {
   position: absolute;
-  z-index: 999;
+  z-index: 100;
   cursor: grab;
   width: 100px;
   height: 100px;
   display: none;
-  opacity: 1;
+  opacity: 0;
   transition: opacity 0.5s linear;
+
+  &:hover .close {
+    transition: opacity 0.3s ease;
+    opacity: 0.5;
+  }
+
+  .close {
+    display: none;
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    top: 0;
+    right: 0;
+    cursor: pointer;
+    color: lightblue;
+    opacity: 0;
+
+    &:hover {
+      opacity: 1;
+    }
+  }
 }
 
 #circle-wrap {
+  z-index: 101;
   display: none;
   position: fixed;
 
@@ -18,6 +40,12 @@
     width: 60px;
     height: 60px;
     border-radius: 100%;
-    background: red;
+    
+    // &:nth-child(even) {
+    //   background: red;
+    // }
+    // &:nth-child(odd) {
+    //   background: blue;
+    // }
   }
 }
