--- a/apps/pingpong/src/styles/main.less
+++ b/apps/pingpong/src/styles/main.less
@@ -6,71 +6,54 @@ body {
   background: #ddd;
 }
 
-.table {
+#wrap {
+  @width: 600px;
+  @height: 700px;
   position: relative;
-  box-sizing: border-box;
-  width: 600px;
-  height: 700px;
-  border: 3px solid #000;
+  width: @width;
+  height: @height;
   margin: 0 auto;
-  background: #fff;
-}
+  border: 3px solid #000;
 
-.ball {
-  position: absolute;
-  background: Orange;
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-}
+  #table {
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+  }
 
-.blade {
-  position: absolute;
-  width: 100px;
-  height: 12px;
-  background-color: #f60;
-  border-radius: 3px;
-}
+  #ready-icon {
+    @color: rgb(133, 248, 87);
+    @fontSize: 20px;
+    @diameter: 66px;
+    background-color: #000;
+    cursor: pointer;
+    box-sizing: border-box;
+    position: absolute;
+    width: @diameter;
+    height: @diameter;
+    border: 2px solid @color;
+    border-radius: 100%;
+    left: calc(50% - @diameter / 2);
+    top: calc(50% - @diameter / 2);
+    color: @color;
 
-.player {
-  left: calc(50% - 50px);
-  bottom: 3px;
-}
+    &:hover {
+      color: #000;
+      transition: background-color 0.5s ease, color 0.5s ease;
+      background-color: @color;
+    }
 
-.rival {
-  right: calc(50% - 50px);
-  top: 3px;
-}
-
-.net {
-  position: absolute;
-  top: calc(50% - 1px);
-  left: 0;
-  height: 0;
-  width: 100%;
-  border-bottom: 4px solid #000;
-}
-
-.ready {
-  position: absolute;
-  text-align: center;
-  width: 80px;
-  height: 80px;
-  left: calc(50% - 42px);
-  top: calc(50% - 40px);
-  border-radius: 50%;
-  border: 4px solid red;
-  font-weight: bold;
-  font-size: 18px;
-  background-color: white;
-  transition: all 0.5s;
-  z-index: 2;
-}
-
-.ready:hover {
-  cursor: pointer;
-  background-color: red;
-  color: white;
+    &::after {
+      line-height: @diameter - @fontSize / 2;
+      font-size: @fontSize;
+      font-weight: bold;
+      text-align: center;
+      display: block;
+      position: relative;
+      content: 'Ready';
+    }
+  }
 }
 
 #name {
@@ -84,30 +67,20 @@ body {
   border: 2px solid #666;
 }
 
-.errorMessage {
+#error-message {
   margin: 8px auto 0;
   width: 200px;
   text-align: center;
   color: #f00;
 }
 
-.oppoName {
+#oppo-name {
   color: #f00;
   width: 300px;
   margin: 25px auto;
   text-align: center;
-}
-.oppoName b {
-  color: #06d;
-}
 
-.announce {
-  color: #aa0;
-  position: absolute;
-  width: 240px;
-  top: 100px;
-  left: calc(50% - 120px);
-  text-align: center;
-  font-size: 30px;
-  line-height: 42px;
+  b {
+    color: #06d;
+  }
 }
