--- a/apps/pingpong/src/styles/main.less
+++ b/apps/pingpong/src/styles/main.less
@@ -56,6 +56,35 @@ body {
       content: 'Ready';
     }
   }
+
+  #announcement {
+    @width: 200px;
+    @height: 100px;
+    width: 200px;
+    height: 0;
+    color: rgb(199, 22, 22);
+    font-size: 20px;
+    font-weight: bold;
+    position: absolute;
+    left: calc(50% - @width / 2);
+    border-radius: 3px;
+    background-color: #fff;
+    box-shadow: 0 0 6px 2px #888;
+    transition: all 0.3s ease;
+    text-align: center;
+
+    &.show {
+      height: @height;
+      top: calc(50% - @height / 2);
+      opacity: 1;
+    }
+
+    &.hide {
+      height: 0;
+      top: calc(50% - @height / 2 - 66px);
+      opacity: 0;
+    }
+  }
 }
 
 #name {
