--- a/apps/common/src/modules/audio/index.less
+++ b/apps/common/src/modules/audio/index.less
@@ -60,7 +60,7 @@
 
   .lock {
     position: absolute;
-    bottom: 0;
+    bottom: calc(50% - 0.7em);
     right: -3.2em;
     font-size: 1.5em;
     font-weight: bold;
