--- a/apps/common/src/modules/scroll/index.less
+++ b/apps/common/src/modules/scroll/index.less
@@ -31,22 +31,33 @@
 }
 
 #scroll {
-  width: 20rem;
-  height: 11rem;
+  display: block;
+  font-size: 10px;
+  width: 20em;
+  height: 11em;
   opacity: 1;
   position: fixed;
   top: 0;
-  right: 4rem;
-  perspective: 80rem;
+  right: 6em;
+  perspective: 80em;
   perspective-origin: right top;
-  z-index: 98;
-  transition: opacity 0.5s ease;
+  z-index: 99;
+  transition: opacity 0.7s ease, top 0.7s ease, box-shadow 0.7s ease;
+
+  &.show {
+    top: 1.8em;
+    opacity: 1;
+  }
+
+  &.hide {
+    top: -7.2em;
+    opacity: 0;
+  }
 
   #list {
     position: relative;
-    font-size: 1.4rem;
     float: right;
-    top: 3.2rem;
+    top: 3.2em;
     right: 0;
     transform-origin: 50% 0 0;
     transform-style: preserve-3d;
@@ -59,52 +70,63 @@
     cursor: pointer;
   }
 
+  #list div>span {
+    font-size: 1.4em;
+  }
+
   #list div {
-    line-height: 4rem;
+    line-height: 4em;
     text-align: center;
     background: rgba(255, 255, 255, 0.9);
-    top: 4.4rem;
-    width: 20rem;
-    height: 4rem;
+    top: 4.4em;
+    width: 20em;
+    height: 4em;
     transition: background 0.4s ease, box-shadow 1s ease;
     transform-origin: top;
     transform: rotateX(-180deg);
     transform-style: preserve-3d;
-    box-shadow: inset 0 0 0 2rem rgba(130, 130, 130, 1);
+    box-shadow: inset 0 0 0 2em rgba(130, 130, 130, 1);
   }
 
   #list>div {
-    top: 5rem;
+    top: 5em;
   }
 
   #list .strip {
-    width: 0.3rem;
-    height: 5rem;
+    width: 0.3em;
+    height: 5em;
     background: #cdf;
     z-index: 1;
-    top: -5rem;
+    top: -5em;
   }
 
   #list .strip:nth-of-type(1) {
-    left: 1.8rem;
+    left: 1.8em;
   }
 
   #list .strip:nth-of-type(2) {
-    left: 17.8rem;
+    left: 17.8em;
   }
 
   #list h3 {
+    font-size: inherit;
     padding: 0;
     margin: 0;
-    line-height: 5rem;
+    line-height: 5em;
     text-align: center;
-    background: #f88;
-    width: 20rem;
-    height: 5rem;
+    background: url("/@resources/static/materials/banner.jpg");
+    background-position: 0 5.6em;
+    background-size: cover;
+    width: 20em;
+    height: 5em;
     position: relative;
     z-index: 99;
     cursor: default;
-    box-shadow: 0 0.1rem 0.3rem #888;
+    box-shadow: 0 0.1em 0.3em #888;
+  }
+
+  #list h3>span {
+    font-size: 1.6em;
   }
 
   #list a {
@@ -119,7 +141,7 @@
     animation: 1.6s scrollOpen;
     transform-origin: top;
     transform: rotateX(0deg);
-    box-shadow: inset 0 0 0 2rem rgba(130, 130, 130, 0);
+    box-shadow: inset 0 0 0 2em rgba(130, 130, 130, 0);
   }
 
   #list .hide {
