--- a/apps/common/src/modules/lamp/index.less
+++ b/apps/common/src/modules/lamp/index.less
@@ -106,15 +106,15 @@
   display: block;
   font-size: 12px;
   position: fixed;
-  left: 3.1em;
-  top: 0;
+  left: 3.7em;
+  top: 0.1rem;
   height: 6em;
   width: 7.8em;
   z-index: 8;
   transition: opacity 0.7s ease, left 0.7s ease;
 
   &.show {
-    left: 3.1em;
+    left: 3.7em;
     opacity: 0.8;
   }
   
@@ -133,7 +133,7 @@
   width: 7.9em;
   position: relative;
   top: -1.4em;
-  left: -3.2em;
+  left: -3.7em;
 }
 
 #lamp .knot {
