--- a/apps/admin/src/styles/index.less
+++ b/apps/admin/src/styles/index.less
@@ -1,3 +1,10 @@
+html, body {
+  margin: 0;
+  padding: 0;
+}
+
 body {
-  background-color: cyan;
+  height: 100vh;
+  background-size: cover;
+  background: url('@resources/dynamic/images/album/dragon.jpg');
 }
