--- a/apps/common/src/modules/message/index.less
+++ b/apps/common/src/modules/message/index.less
@@ -1,38 +1,40 @@
 #message {
   @posY: 100px;
 
+  z-index: 1001;
   position: fixed;
   padding: 8px;
   font-size: 16px;
   background-color: #fff;
   border-radius: 6px;
-  box-shadow: 2px 3px 6px 1px #08283a;
+  box-shadow: 1px 2px 3px 1px #08283a;
   overflow: hidden;
   line-height: 16px;
 
   img {
+    border-radius: 2px;
     vertical-align: middle;
     position: relative;
-    top: -@posY;
+    top: -1px;
     display: inline-block;
     height: 16px;
     margin-right: 8px;
   }
 
   &.success img {
-    filter: drop-shadow(rgb(3, 241, 63) 0 @posY);
+    background-color: rgb(3, 241, 63);
   }
 
   &.error img {
-    filter: drop-shadow(rgb(235, 98, 98) 0 @posY);
+    background-color: rgb(235, 98, 98);
   }
 
   &.info img {
-    filter: drop-shadow(rgb(41, 92, 233) 0 @posY);
+    background-color: rgb(84, 125, 238);
   }
 
   &.alert img {
-    filter: drop-shadow(rgb(250, 250, 62) 0 @posY);
+    background-color: rgb(250, 250, 62);
   }
 
   &.show {
